CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-30 20:38:53
+lastsearch = 2024-07-30 22:19:09
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Non-alcoholic fatty liver disease and colorectal cancer ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
+match = -205.9%%
+title = Updating the role of obesity and cholesterol in breast cancer
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6397485/
 
 [books.google.com]
 match = -200.0%%
@@ -57,9 +57,9 @@ title = 20th Century Reanalysis: NOAA Physical Sciences Laboratory
 url = https://www.psl.noaa.gov/data/20thC_Rean/
 
 [pubs.acs.org]
-match = -176.5%%
-title = Sodium Alginate-Based Functional Materials toward ...
-url = https://pubs.acs.org/doi/10.1021/acs.iecr.3c01082
+match = -111.8%%
+title = Design of a Dual Channel Self-Reference ...
+url = https://pubs.acs.org/doi/10.1021/acs.analchem.7b03132
 
 [www.sciencedirect.com]
 match = -182.4%%
@@ -270,4 +270,14 @@ url = https://stray-kids.fandom.com/wiki/Bang_Chan
 match = -158.8%%
 title = The 5th edition of the World Health Organization ...
 url = https://www.nature.com/articles/s41375-022-01620-2
+
+[www.cell.com]
+match = -205.9%%
+title = induced shunting inhibition and modulates epileptic seizures
+url = https://www.cell.com/cell-reports/pdf/S2211-1247(21)00817-2.pdf
+
+[www.mdpi.com]
+match = -170.6%%
+title = Growth Performance, Survival, Blood Chemistry, and ...
+url = https://www.mdpi.com/2306-7381/9/12/701
 
