--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-30 20:31:52
+lastsearch = 2024-07-30 22:13:38
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html?srsltid=AfmBOopalCDDp6uLjdaml8Zx6q78ujkDFjfKBCT7Va5usy_TTu0R7MSE
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [www.youtube.com]
 match = -128.6%%
