--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-30 20:59:02
+lastsearch = 2024-07-30 22:20:53
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -181.2%%
-title = Nước lũ dâng cao, nhiều nơi chìm trong biển nước | VTC16
-url = https://www.youtube.com/watch?v=d0pMIC4bxBQ
+match = -218.8%%
+title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
+url = https://www.youtube.com/watch?v=hxI-i5jAeB8
 
 [tuyensinh247.com]
 match = -218.8%%
