--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-30 21:45:46
+lastsearch = 2024-07-30 22:21:35
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -4.3%%
 title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOopEV2JezTXZzyXQRKos-uClqu4qay0rb39xA-wZrWC-Qz9zIQ5V
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
 match = 29.4%%
