--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-30 20:24:17
+lastsearch = 2024-07-30 22:12:58
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -33.3%%
-title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
-url = https://songhong.info/chan-ga-goi-bc22
+match = -8.3%%
+title = Mẫu chăn ga gối cao cấp Urban mã UC22-021
+url = https://songhong.info/chan-ga-goi-uc021
 
 [hanvico.com.vn]
 match = 41.7%%
