--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-30 20:06:22
+lastsearch = 2024-07-30 22:17:06
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -87,9 +87,9 @@ title = Sáng 17/9, đã 15 ngày không ghi nhận ca mắc mới COVID ...
 url = http://soyte.hatinh.gov.vn/tin-tuc-su-kien/sang-17-9-da-15-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-co.html
 
 [med.loship.vn]
-match = -57.1%%
-title = Vistar Pharmacy - Phạm Văn Chiêu - Giao nhanh trong 1 giờ
-url = https://med.loship.vn/vistarpharmacyphamvanchieu
+match = -53.6%%
+title = Vistar Pharmacy - Trần Hưng Đạo - Giao nhanh trong 1 giờ
+url = https://med.loship.vn/vistarpharmacytranhungdao
 
 [medlatec.vn]
 match = 0.0%%
@@ -103,8 +103,8 @@ url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?P
 
 [www.facebook.com]
 match = -35.7%%
-title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=gn_PY
+title = Ngọc Reviews - #ngocreviews #matnagiay #bnbg ...
+url = https://www.facebook.com/photo.php?fbid=403628807687374&id=106082990775292&set=a.106104017439856
 
 [www.favri.org.vn]
 match = -10.7%%
