--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-30 21:21:21
+lastsearch = 2024-07-30 22:17:44
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -193.8%%
-title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
-url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
+match = -187.5%%
+title = Điểm du lịch Khánh Hòa – List 18 “TỌA ĐỘ” không thể bỏ ...
+url = https://vinpearl.com/vi/list-18-diem-du-lich-khanh-hoa-dep-xieu-long-khong-the-bo-qua
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -99,7 +99,7 @@ url = https://dulichviet.com.vn/tin-tuc/check-in-18-dia-diem-du-lich-bac-giang-s
 [www.bestprice.vn]
 match = -212.5%%
 title = Top 12 địa điểm đi chơi ở Sài Gòn cuối tuần vui quên lối về
-url = https://www.bestprice.vn/blog/diem-den-8/ho-chi-minh-3/top-12-dia-diem-di-choi-o-sai-gon-cuoi-tuan-vui-quen-loi-ve_26-3983.html
+url = https://www.bestprice.vn/blog/diem-den-8/ho-chi-minh-3/top-12-dia-diem-di-choi-o-sai-gon-cuoi-tuan-vui-quen-loi-ve_26-3983.html?srsltid=AfmBOooAaVp2h2oy4U2CXOvcM4LITEQ_h9wECRjxTPHX_V8lDwdQT-hi
 
 [vinwonders.com]
 match = -162.5%%
@@ -159,7 +159,7 @@ url = https://momo.vn/blog/dia-diem-du-lich-nha-trang-c101dt870
 [vietmytravel.com]
 match = -187.5%%
 title = Du Lịch Mỹ Kết Hợp Thăm Thân Nhân 2024 chỉ với 39tr900
-url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/
+url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/?srsltid=AfmBOopcg55Xy8EaqECsIE5X5ra3K9kPitbWblHIduJOOwVpi0xQihNf
 
 [visana.vn]
 match = -212.5%%
