--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-30 14:44:54
+lastsearch = 2024-07-30 22:28:36
 
 [agasound.vn]
 match = 6.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -146.7%%
+title = bút kèn D212 bút đầu quay dễ thương viết gel
+url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
@@ -77,9 +77,9 @@ title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
 url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
-match = -240.0%%
-title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơi Bắc Hà
-url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
+match = -113.3%%
+title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
 
 [m.facebook.com]
 match = -113.3%%
