--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-30 21:43:12
+lastsearch = 2024-07-30 22:15:01
 
 [www.diepxuan.com]
-match = 0.0%%
-title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+match = 3.6%%
+title = Điệp Xuân Ga chun chần ES1707 160x200
+url = https://www.diepxuan.com/ga-chun-chan-es1707-160x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -17,9 +17,9 @@ title = Race Results | Queen City Yacht Club, Toronto, Canada
 url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://xn------7cdab4agnfidobgeddo6aednle4c8cve.xn--p1ai/7642891fe43y
 
 [www.museum.ru]
-match = -4.0%%
-title = 2024 Hostel warszawa cena
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn--80aeypbmhdn0h.xn--p1ai/MumTJ4afe
+match = 0.0%%
+title = 2024 Ca river plate fc vs platense
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn------7cdab4agnfidobgeddo6aednle4c8cve.xn--p1ai/8SnaYzafe
 
 [www.sap.edu.hk]
 match = -69.2%%
@@ -28,8 +28,8 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 
 [demxanh.com]
 match = -3.6%%
-title = Ga gối Sông Hồng Basic cotton BC23079
-url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc23079.html
+title = Bộ ga gối chun chần Misuko Tencel Rio 02
+url = https://demxanh.com/bo-ga-goi-chun-chan-misuko-tencel-rio-02.html
 
 [stevematuro.com]
 match = -39.3%%
@@ -85,4 +85,9 @@ url = https://newenglandsnarrowroad.com/tag/sizing/
 match = -257.1%%
 title = Gallery
 url = http://www.lacecarriage.com/gallery2.htm
+
+[bizonauto.com]
+match = -96.4%%
+title = News educations days A school where children learn to eat better ...
+url = https://bizonauto.com/index3.php?name=https://xn--80aqaehuekgcjc7j.xn--p1ai/3758269488fe
 
