--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-30 21:35:39
+lastsearch = 2024-07-30 22:19:30
 
 [www.gov.uk]
-match = -200.0%%
-title = Visit the UK as a Standard Visitor: If you're under 18
+match = 0.0%%
+title = 
 url = https://www.gov.uk/standard-visitor/if-youre-under-18
 
 [www.oltarsh.com]
@@ -227,9 +227,9 @@ title = Register Home Page
 url = https://register.fca.org.uk/s/
 
 [loigiaihay.com]
-match = -146.7%%
-title = Giải Listening - Unit 1 trang 16 SGK Tiếng Anh 10
-url = https://loigiaihay.com/listening-unit-1-trang-16-sgk-tieng-anh-10-c77a19723.html
+match = -173.3%%
+title = Giải Language focus - Unit 1 trang 16 SGK Tiếng Anh 8
+url = https://loigiaihay.com/language-focus-unit-1-trang-16-sgk-tieng-anh-8-c75a18692.html
 
 [www.forkunion.com]
 match = -106.7%%
