--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-30 21:14:31
+lastsearch = 2024-07-30 22:31:58
 
 [shopee.vn]
 match = -76.2%%
@@ -190,4 +190,9 @@ url = https://websosanh.vn/s/tham+nhung+trai+giuong.htm
 match = 28.6%%
 title = Thảm Len Màu Đỏ Tươi SA 216
 url = https://thamht.vn/products/tham-len-mau-do-tuoi-sa-216
+
+[noithatdaimoc.vn]
+match = 28.6%%
+title = GIƯỜNG TẦNG 16
+url = https://noithatdaimoc.vn/giuong-tang-16
 
