--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-30 21:38:24
+lastsearch = 2024-07-30 22:44:41
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -94.4%%
-title = LNS International Corporation | Houston TX
-url = https://www.facebook.com/lnsus2018/
+match = -150.0%%
+title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
+url = https://www.facebook.com/sieuthinem267/
 
 [voz.vn]
 match = 11.1%%
@@ -82,14 +82,14 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -177.8%%
-title = Đây là cách tạo ra món Bánh Bông Lan xốp mềm béo thơm ...
-url = https://www.youtube.com/watch?v=iS_07jVlezc
+match = -111.1%%
+title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
+url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -38.9%%
-title = Chao Recipe Vietnamese Meatball
-url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
+match = -133.3%%
+title = 📍nem chua rán: 230 ngõ chợ khâm thiên. ⭐️: 6-15 cành ...
+url = https://www.tiktok.com/@longlongneee/video/7298670033461431570
 
 [vi.wikipedia.org]
 match = -27.8%%
