--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-30 17:25:13
+lastsearch = 2024-07-30 22:43:58
 
 [www.diepxuan.com]
 match = 27.3%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOopTPEUmZ84yw4C7W_0HBwYlJq2NKyhbBnomTsKjvUqAqTFn8p7n
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html?srsltid=AfmBOooJAoh8tTx6ExWWMieRHlz510_y1tbKGaFbluPeU4Q1Dn6nfkNR
 
 [www.lazada.vn]
 match = -113.6%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOooQllLmtD6ypLxKbiispx2J5FTEBuZvBTZITqC1QkcE0ywMae7V
 
 [www.sendo.vn]
 match = 4.5%%
