CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-30 22:16:43
+lastsearch = 2024-07-30 22:46:04
 
 [chieutruc.info]
 match = -100.0%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 [nhathuoclongchau.com.vn]
 match = -104.5%%
 title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html?srsltid=AfmBOooPQYXJ2Se29dj6tO6gR2w_3kJ2Z3nHq-9woTvsapYlLrs_sFPf
 
 [www.vinmec.com]
 match = 4.5%%
@@ -37,9 +37,9 @@ title = [HD] Chiếu cói Kim Sơn - Ninh Bình
 url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
-match = 40.9%%
-title = Chiếu Cói Cao Cấp Nga Sơn
-url = https://www.facebook.com/chieucoiviettrang/
+match = 45.5%%
+title = Chiếu Cói Thân Vui Thái Bình
+url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
 match = -109.1%%
@@ -49,7 +49,7 @@ url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-d
 [www.lazada.vn]
 match = -68.2%%
 title = 🌿Chiếu Việt Thái Cao Cấp Chính Hãng🌿 Chiếu Nhựa Việt ...
-url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html
+url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html?srsltid=AfmBOoo3cyqqz3-e9ra7QGk0GTb4WWSJLwliANHs_zl2ZyampUZu74RX
 
 [shopee.vn]
 match = -13.6%%
@@ -255,4 +255,9 @@ url = https://www.otofun.net/threads/chieu-coi-tatami-–-chieu-coi-xuat-nhat-no
 match = 4.5%%
 title = Thân thương chiếu cói Kim Sơn
 url = https://vov2.vov.vn/van-hoa-giai-tri/than-thuong-chieu-coi-kim-son-26800.vov2
+
+[www.avakids.com]
+match = 0.0%%
+title = 
+url = https://www.avakids.com/me-va-be/thai-nhi-18-tuan-1546019
 
