--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-30 19:23:52
+lastsearch = 2024-07-30 22:48:06
 
 [tiki.vn]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = 12.0%%
-title = Quốc triều chính biên toát yếu
-url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gE5_O_0W&sig=ACfU3U3bulwCtGucffSv9htf5fhj5uHcUA&hl=en&sa=X&ved=2ahUKEwjT_5nxtM2HAxXtGEQIHSfyIpMQ6AF6BAgXEAM
+match = -40.0%%
+title = Văn Mẫu Lớp 12 (Tập 2) - Google Books Result
+url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfT22maZk&sig=ACfU3U2_s4vh48969i27aIwkCqnPLyz5og&hl=en&sa=X&ved=2ahUKEwiC-Py6js-HAxWtJNAFHbwcDPAQ6AF6BAgbEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
