--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-30 21:59:14
+lastsearch = 2024-07-30 22:44:23
 
 [demxanh.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = -13.0%%
+title = TÌM HIỂU CHIẾU TRÚC CAO BẰNG BÁN TẠI SÀI GÒN
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/tim-hieu-chieu-truc-cao-bang-ban-tai-sai-gon-59.html
 
 [khodem.vn]
 match = -56.5%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://baocaobang.vn/-3524.html
 
 [www.youtube.com]
-match = -39.1%%
-title = Vườn nho làng So níu chân du khách | VTC16
-url = https://www.youtube.com/watch?v=5ZxvGuxyrZI
+match = -108.7%%
+title = Miền Bắc mưa lớn kéo dài đến 2/8, ngập lụt còn tiếp diễn ...
+url = https://www.youtube.com/watch?v=gCKby5upOvg
 
 [chieu.com.vn]
 match = -43.5%%
