--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-30 18:27:27
+lastsearch = 2024-07-30 22:48:49
 
 [www.diepxuan.com]
-match = -20.0%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopA2e3xkdC2cXBzvFmbXufvi7m1qkkZUh3TeGVWk40UHW7fz_w6
+match = -6.7%%
+title = Điệp Xuân Chiếu cây HT 160x200
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
 match = -6.7%%
