--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-30 22:20:53
+lastsearch = 2024-07-30 22:51:15
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -218.8%%
-title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
-url = https://www.youtube.com/watch?v=hxI-i5jAeB8
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -485,4 +485,9 @@ url = https://truyenhinhdaknong.vn/kho-video.htm
 match = -212.5%%
 title = Lựa chọn cửa hàng độ đèn ô tô tại Đà Nẵng chất lượng uy tín
 url = https://baoquangnam.vn/lua-chon-cua-hang-do-den-o-to-tai-da-nang-chat-luong-uy-tin-3138748.html
+
+[thethao247.vn]
+match = -100.0%%
+title = Lịch thi đấu LPL Mùa Hè 2024 LMHT mới nhất
+url = https://thethao247.vn/400-lich-thi-dau-lpl-mua-he-2024-lmht-moi-nhat-hom-nay-d277612.html
 
