--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-30 20:30:45
+lastsearch = 2024-07-30 22:51:36
 
 [www.tiktok.com]
 match = -82.4%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -223.5%%
-title = HOA tried to punish us - Told us to "Stop them if we can" - ...
-url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
+match = -200.0%%
+title = HOA guy fines a dude for having a broom out : r/TikTokCringe
+url = https://www.reddit.com/r/TikTokCringe/comments/1achag2/hoa_guy_fines_a_dude_for_having_a_broom_out/
 
 [music.apple.com]
 match = -194.1%%
@@ -605,4 +605,9 @@ url = https://www.yelp.com/biz/taylor-management-company-whippany
 match = 0.0%%
 title = 
 url = https://www.tallahassee.com/story/news/local/state/2024/07/01/florida-hoa-new-law-july/74265853007/
+
+[angelikalijoerg.de]
+match = -88.2%%
+title = Gái Xinh Tập 10 đẹp Coô - Angelika Li Jörg
+url = https://angelikalijoerg.de/1480604-tập-10-coô-xinh-đẹp-gái.html
 
