--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-30 18:29:54
+lastsearch = 2024-07-30 23:45:31
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -133.3%%
-title = Sân nhà cung các hoạt động khác diễn ra tại
-url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
+match = -166.7%%
+title = Celadon Sports & Resort Club | Ho Chi Minh City
+url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -395,4 +395,9 @@ url = http://www.chieulongdinh.com.vn/en/san-pham/8/chieu-coi-soc-08m-x-2m.html
 match = -62.5%%
 title = Recessed
 url = https://www.tamliteusa.com/index.php?v=det&rid=1264
+
+[moc.gov.vn]
+match = -226.7%%
+title = Vĩnh Phúc: Công bố 3 đồ án quy hoạch phân khu A4, C4, D2
+url = https://moc.gov.vn/en/_layouts/15/NCS.Webpart.MOC/mt_poup/Intrangweb.aspx?IdNews=36508
 
