CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-30 22:19:09
+lastsearch = 2024-07-30 23:48:13
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -205.9%%
-title = Updating the role of obesity and cholesterol in breast cancer
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6397485/
+match = -194.1%%
+title = Non-alcoholic fatty liver disease and colorectal cancer ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0u6t36Eh&sig=ACfU3U1tZbn705L1ihWFjY_ID7NAuzNMDA&hl=en&sa=X&ved=2ahUKEwjszd7J8c6HAxUIGTQIHZ7xC_wQ6AF6BAgYEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWGM2m6d&sig=ACfU3U3oEqMS-fnvxTiC9221LZc009rJyA&hl=en&sa=X&ved=2ahUKEwixqvLym8-HAxUpFlkFHcztIEkQ6AF6BAhAEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -129.4%%
-title = Does KQ Entertainment treat their idols well?
-url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
+match = -211.8%%
+title = Does JYP allow his artists to write down their own songs or ...
+url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
 
 [msaniimusicgroup.org]
 match = 0.0%%
