--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-30 21:34:22
+lastsearch = 2024-07-30 23:42:53
 
 [www.lazada.vn]
 match = -50.0%%
@@ -187,9 +187,9 @@ title = The joy of pregnancy Sinopsos lengkap tell me you love ...
 url = https://bbc.github.io/programmes-preview/index.html?width=320&url=https://xn--80ai2adeb.xn--p1ai/aupOZJ6fepr
 
 [www.hansgrohe-usa.com]
-match = -166.7%%
-title = Finoris Bath mixers: 2 functions, Chrome, Art. no. 76445001
-url = https://www.hansgrohe-usa.com/articledetail-finoris-freestanding-tub-filler-trim-with-1-75-gpm-handshower-76445001
+match = -127.8%%
+title = Vernis Shape Pressure Balance Shower Set, 1.75 GPM
+url = https://www.hansgrohe-usa.com/articledetail-vernis-shape-pressure-balance-shower-set-1-75-gpm-04959000
 
 [shopee.vn]
 match = -150.0%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -138.9%%
-title = AXOR Universal Softsquare Shower door handle 444 mm
-url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
+match = -205.6%%
+title = Metris Select M71, Single lever kitchen mixer 240, pull-out ...
+url = https://pro.hansgrohe.com/articledetail-metris-select-m71-single-lever-kitchen-mixer-240-pull-out-spout-1jet-14857000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -360,4 +360,9 @@ url = https://www.indiabudget.gov.in/budget2021-22/economicsurvey/doc/echapter_v
 match = 11.1%%
 title = Vỏ gối lụa khâu thủ công 50x70cm
 url = https://baminh.com/vo-goi-lua-khau-thu-cong-50x70cm
+
+[www.practicalradonc.org]
+match = -38.5%%
+title = Abbreviations
+url = https://www.practicalradonc.org/cms/10.1016/j.prro.2022.05.004/attachment/73029f4a-263f-4bff-ba5a-038055b1823f/mmc4.xlsx
 
