--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-30 22:22:15
+lastsearch = 2024-07-30 23:46:47
 
 [www.youtube.com]
 match = -147.4%%
@@ -292,9 +292,9 @@ title = Fuhu - Mạng xã hội dành cho nhà sáng tạo
 url = https://fuhuq.net/en
 
 [suckhoedoisong.vn]
-match = -152.6%%
-title = Nữ bác sĩ nội trú Hoàng Minh Lý hồi phục sau tai nạn hy ...
-url = https://suckhoedoisong.vn/nu-bac-si-noi-tru-hoang-minh-ly-hoi-phuc-sau-tai-nan-hy-huu-se-tro-lai-lam-viec-tai-benh-vien-k-169240730144720202.htm
+match = -157.9%%
+title = Báo động mỗi ngày có tới 40-50 ca nhập viện vì đột quy ...
+url = https://suckhoedoisong.vn/bao-dong-moi-ngay-co-toi-40-50-ca-nhap-vien-vi-dot-quy-benh-co-xu-huong-ngay-cang-tre-hoa-169240724134606957.htm
 
 [thegioihoa.net]
 match = -89.5%%
