--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-30 22:27:13
+lastsearch = 2024-07-30 23:50:21
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 40.9%%
+title = Thảm giường nỉ 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOooiXL_VuLof-yPxZ-txkr5JkrdYICe-Wo6FVHLlQCS7E5TzY4lK
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html?srsltid=AfmBOoqaA9ZdaoHI6QWqLD_J2XVMUAne9p_u9br_evX35hp69iGImXVW
 
 [www.lazada.vn]
 match = -68.2%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOoqzeGZXpyqFDbELXc1OR9fQQDMdkiNlSLe2hDGh_l4KiCyx0ZI6
 
 [noithatlongthai.com]
 match = -13.6%%
