CI images update

--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-30 21:48:10
+lastsearch = 2024-07-31 00:23:29
 
 [shopee.vn]
-match = -216.7%%
-title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ thảm trải ghế
+match = -191.7%%
+title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [goiaura.com]
 match = -16.7%%
@@ -47,9 +47,9 @@ title = Thảm ghế nệm ghế kích thước 2m2 x 55cm mẫu màu đỏ ...
 url = https://tiki.vn/tham-ghe-nem-ghe-kich-thuoc-2m2-x-55cm-mau-mau-do-moi-co-vien-p89638586.html
 
 [suongtuyet.com]
-match = -125.0%%
-title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
-url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
+match = -133.3%%
+title = Nên Mua Thảm Lót Ghế Gỗ Hay Đệm Ghế Gỗ?
+url = https://suongtuyet.com/nen-mua-tham-lot-ghe-go-hay-dem-ghe-go.html
 
 [nemkimcuong.vn]
 match = -16.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -258.3%%
-title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
-url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
+match = -216.7%%
+title = Thảm Ghế Gỗ Giá Tốt T05/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-ghe-go/
 
 [vn.my-best.com]
 match = -233.3%%
@@ -175,4 +175,19 @@ url = https://noithatgiaphong.vn/chuyen-de-noi-that/ghe-an-boc-nem-va-nhung-luu-
 match = -316.7%%
 title = Hướng dẫn cách giặt nệm ghế sofa tại nhà hiệu quả nhanh nhất
 url = https://www.vesinhtoday.com/meo-vat/meo-ve-sinh-nem/huong-dan-cach-giat-nem-ghe-sofa-tai-nha-hieu-qua-nhanh-nhat-2
+
+[thamtraisangiadinh.com]
+match = -208.3%%
+title = Thảm Trải Ghế Gỗ | Thảm Ghế Len Cắt Theo Yêu Cầu
+url = https://thamtraisangiadinh.com/tham-trai-ghe-go
+
+[hanahanadeco.com]
+match = -183.3%%
+title = Thảm Trải ghế Sofa Mùa Hè The Basic Hàn Quốc
+url = https://hanahanadeco.com/products/tham-trai-ghe-sofa-mua-he-the-basic-han-quoc
+
+[flexhouse.vn]
+match = 33.3%%
+title = Thảm phủ ghế sofa
+url = https://flexhouse.vn/tu-khoa-san-pham/tham-phu-ghe-sofa
 
