--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-30 23:38:23
+lastsearch = 2024-07-31 00:13:27
 
 [vinatools.com]
 match = -140.0%%
 title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/
+url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOopK4Z4jrsUHk2RAIu4JD39EBXKgUn7BUyPX3kTX8L-cg-CjkLX4
 
 [www.vietnamairport.vn]
 match = -240.0%%
@@ -237,8 +237,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.axel-gl.com]
-match = -260.0%%
-title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
+match = -213.3%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
