--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-30 21:45:14
+lastsearch = 2024-07-31 00:20:44
 
 [scholar.google.com]
 match = -43.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 29/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -156.2%%
-title = ĐẠO TRÀNG CHUYÊN TU CHÙA THỌ KHUÊ BUỔI 2- CHIỀU ...
-url = https://www.youtube.com/watch?v=FVAlaGDzUbc
+match = -143.8%%
+title = TIN CHIỀU 29/7: WILLIAMS TỪ CHỐI BARCA?, SỐC: 250 ...
+url = https://www.youtube.com/watch?v=xIDGon1dIn0
 
 [books.google.com]
 match = -156.2%%
