--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-30 17:53:43
+lastsearch = 2024-07-31 00:22:26
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -48,13 +48,13 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOorVJfgGqSvG0XWL6X7Rv8KBSEMW_qEJCZw9ZIgEN07Xhm35Vp8n
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
