--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-30 23:35:38
+lastsearch = 2024-07-31 00:11:22
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/search?keyword=chiếu trúc hạt
 [www.diepxuan.com]
 match = 28.6%%
 title = Chiếu trúc Quế Lâm II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html?srsltid=AfmBOoqE6RK7QJ78GZwPlcyu-uzjrMVs_wvsRtmJVER6wpDZmE1I2pJ9
 
 [www.lazada.vn]
 match = 70.4%%
