--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-30 20:40:43
+lastsearch = 2024-07-31 00:21:24
 
 [demxanh.com]
 match = -18.5%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội
 url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.html
 
 [dem24h.vn]
-match = 29.6%%
-title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
-url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
+match = 51.9%%
+title = Chiếu trúc gập vân gỗ 2 mặt
+url = https://dem24h.vn/chieu-truc-gap-van-go
 
 [thegioidemonline.com]
 match = 65.4%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Chiếu trúc Thái đen 160x200
 url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
-match = -18.5%%
-title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
-url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
+match = -48.1%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình 100%% made in Việt Nam ...
+url = https://shopee.vn/Chiếu-Tre-Việt-Phổ-Mến-Thái-Bình-100-made-in-Việt-Nam-đan-thủ-công-chắc-chắn-i.334752746.9933777878
 
 [tiki.vn]
 match = -7.4%%
