--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-30 22:53:44
+lastsearch = 2024-07-31 00:22:05
 
 [everon.vip]
-match = 44.4%%
-title = Nệm Everon Ceramic
-url = https://everon.vip/nem-everon-ceramic
+match = -10.0%%
+title = NỆM EVERON
+url = https://everon.vip/nem
 
 [everonvn.com.vn]
 match = 23.8%%
@@ -52,9 +52,9 @@ title = Đệm bông ép Everon kết hợp topper 5cm
 url = https://everon365.vn/dem-bong-ep-everon-ket-hop-lop-topper-5cm.html
 
 [www.everonvn.vn]
-match = -71.4%%
-title = Bảng giá đệm bông ép Everon 1m6 (1.6m hay 160 x 200)
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m6.html
+match = -100.0%%
+title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [everon.com.vn]
 match = -114.3%%
@@ -92,8 +92,8 @@ title = Nệm everon giá rẻ khuyến mãi kèm nhiều quà tặng tại TP .
 url = https://noithatken.com/nem/nem-everon/
 
 [everonvietnam.com]
-match = -128.6%%
-title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & ...
+match = -152.4%%
+title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/kich-co/160-x-200/page/32/
 
 [nem.vn]
