--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-30 22:13:17
+lastsearch = 2024-07-31 00:23:08
 
 [m.youtube.com]
 match = -144.4%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorzN3fm4_IzkAesFEAHR22fdL_2IJqa8Ws6Qv_SCRtn5ooUjUhX
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [www.proz.com]
 match = -183.3%%
