--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-30 22:37:40
+lastsearch = 2024-07-31 00:12:06
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOooJJIf812zYK2khxuDhLdqTClbzWOSk2-EHncS70Hs_U5HcMyS7
 
 [demre.com.vn]
 match = 18.2%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoo9MnAWFIxxRKT8pmBsFfQhao5eDn0iRmrHibhee22wzltKmgQO
 
 [www.lazada.vn]
 match = -77.3%%
