--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-30 23:35:57
+lastsearch = 2024-07-31 00:20:05
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = -38.5%%
-title = R Lor Randall
-url = https://profiles.ucdavis.edu/r.randall
+match = 0.0%%
+title = Merrill E Gershwin
+url = https://profiles.ucdavis.edu/merrill.gershwin
 
 [store.samhsa.gov]
 match = -60.0%%
