CI images update

--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-31 00:17:55
+lastsearch = 2024-07-31 01:21:56
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -54,7 +54,7 @@ url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-
 [everon.com.vn]
 match = 15.4%%
 title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/?srsltid=AfmBOoo5CyXLYhPqJ-b0HCMn9r9YK_T_K9bAxiXt4xeo_tgmRMM8kZjQ
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [chandrapsaigon.com]
 match = -11.8%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022?srsltid=AfmBOorupXAjSOU9R1o5uxUVzGxlrMQ5IrKclczRpFv8-M246gI9X2AC
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
