--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-31 00:16:53
+lastsearch = 2024-07-31 01:27:05
 
 [chieutruc.info]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt
 url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
-match = -100.0%%
-title = Bảng cân nặng và chiều dài thai nhi theo tiêu chuẩn của ...
-url = https://www.vinmec.com/vie/bai-viet/bang-can-nang-va-chieu-dai-thai-nhi-theo-tieu-chuan-cua-who-vi/
+match = 4.5%%
+title = Sự phát triển của thai nhi tuần 18
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-18-vi
 
 [www.youtube.com]
 match = 9.1%%
