--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-30 23:43:14
+lastsearch = 2024-07-31 01:29:56
 
 [demxanh.com]
-match = 38.2%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 14.7%%
+title = Chiếu điều hòa tencel - Chiếu cao su non có mát không?
+url = https://demxanh.com/chieu-dieu-hoa-tencel-chieu-cao-su-non-co-mat-khong.html
 
 [shopee.vn]
 match = 23.5%%
