--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-30 23:45:31
+lastsearch = 2024-07-31 01:24:39
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -166.7%%
-title = Celadon Sports & Resort Club | Ho Chi Minh City
-url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
+match = -126.7%%
+title = Celadon Sports & Resort Club - Facebook
+url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -400,4 +400,9 @@ url = https://www.tamliteusa.com/index.php?v=det&rid=1264
 match = -226.7%%
 title = Vĩnh Phúc: Công bố 3 đồ án quy hoạch phân khu A4, C4, D2
 url = https://moc.gov.vn/en/_layouts/15/NCS.Webpart.MOC/mt_poup/Intrangweb.aspx?IdNews=36508
+
+[thudaumot.binhduong.gov.vn]
+match = -233.3%%
+title = Công bố Quyết định phê duyệt Quy hoạch chi tiết xây dựng ...
+url = https://thudaumot.binhduong.gov.vn/chi-tiet?id=ART240700000115
 
