--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-30 19:25:53
+lastsearch = 2024-07-31 01:19:50
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -200.0%%
-title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
-url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
+match = -175.0%%
+title = 🔴Trực Tiếp | VIỆT NAM vs THÁI LAN |🏀 Chung kết bóng ...
+url = https://www.youtube.com/watch?v=ileoxQUx2Hc
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -157,9 +157,9 @@ title = số đỏ casino xs 24|Casino Online Châu Á
 url = https://sinhvien.mit.vn/số-đỏ-casino-xs-24.phtm
 
 [www.facebook.com]
-match = -168.8%%
-title = Khen Phim - Review phim chiếu rạp | K xem các phần ...
-url = https://www.facebook.com/groups/khenphim/posts/k-xem-các-phần-trước-có-giểu-dc-nội-dung-phim-này-k-mng-mình-xin-rv-phim-có-hay-/1779205792553570/
+match = -125.0%%
+title = LỄ BỐC THĂM CHIA CẶP... - Cao Thủ Liên Quân
+url = https://www.facebook.com/story.php/?story_fbid=1021633259632655&id=100053579700031
 
 [www.bthh.org.vn]
 match = -68.8%%
