--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-31 00:44:09
+lastsearch = 2024-07-31 01:22:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = thảo luận - Hội anh em đi Mazda. | Page 733
 url = https://voz.vn/t/hoi-anh-em-di-mazda.14268/page-733
 
 [www.tiktok.com]
-match = -246.7%%
-title = Cặp đôi Tiktoker Tín Nguyễn và Huỳnh Nhựt đến chung vui ...
-url = https://www.tiktok.com/@bimatvbiz/video/7242672033107135750
+match = -8.3%%
+title = Nguyen Lê Vi
+url = https://www.tiktok.com/discover/nguyen-lê-vi?lang=en
 
 [www.reddit.com]
 match = -120.0%%
