--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-31 00:58:20
+lastsearch = 2024-07-31 01:22:37
 
 [www.lazada.vn]
 match = -212.5%%
 title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn Định ...
-url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html?srsltid=AfmBOorah_p0QWK9cVFXo7Zw_ltgT48sFSpHsa58ExSpTBoRa-QWyb12
+url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html
 
 [shopee.vn]
 match = -206.2%%
@@ -69,7 +69,7 @@ url = https://osnat.bandcamp.com/album/-
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOorXMlUbBbQdZovi-jUuSyOKsqgm-nqZtgG0Tfdz2tzx3E-JmGws
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
