--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-30 22:40:29
+lastsearch = 2024-07-31 01:23:20
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = ADDITIONAL CASE INFORMATION
 url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Courtney Lyles, PhD
-url = https://profiles.ucsf.edu/courtney.lyles
+match = 5.3%%
+title = Margaret Tempero, MD
+url = https://profiles.ucsf.edu/margaret.tempero
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -142.1%%
+title = Exercise Recommendations for Cancer-Related Fatigue ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3647480/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -385,4 +385,9 @@ url = https://www.biorxiv.org/content/10.1101/2024.07.14.603458v1
 match = -121.1%%
 title = TOLERABLE UPPER INTAKE LEVELS FOR VITAMINS AND ...
 url = https://www.efsa.europa.eu/sites/default/files/efsa_rep/blobserver_assets/ndatolerableuil.pdf
+
+[www.sciencedirect.com]
+match = -147.4%%
+title = From one-stop shop to no-stop shop: An e-government ...
+url = https://www.sciencedirect.com/science/article/pii/S0740624X17304239
 
