CI images update

--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-30 20:27:17
+lastsearch = 2024-07-31 01:47:30
 
 [www.lazada.vn]
 match = -193.3%%
@@ -128,8 +128,8 @@ url = https://gagoda.vn/san-pham/chi-tiet/vo_goi_vuong_long/6918
 
 [dienmaycholon.com]
 match = -33.3%%
-title = Gối & Vỏ Gối (Có 85 sản phẩm)
-url = https://dienmaycholon.com/goi-vo-goi
+title = Gối & Vỏ Gối (Có 16 sản phẩm)
+url = https://dienmaycholon.com/goi-vo-goi?t=vo-goi
 
 [phedecor.com]
 match = 6.7%%
