--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-31 01:20:09
+lastsearch = 2024-07-31 01:45:05
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -28,8 +28,8 @@ url = https://www.acupuncture.com/education/points/ren/ren12.htm
 
 [www.facebook.com]
 match = -410.0%%
-title = AcuPro Academy - REN 12 (CV 12) is the Front-Mu point of...
-url = https://www.facebook.com/AcuProAcademy/posts/ren-12-cv-12-is-the-front-mu-point-of-the-stomach-which-makes-it-a-perfect-acupu/1547352235406387/
+title = CV 12 - The Front-Mu point of Stomach! #AcupunctureRocks
+url = https://www.facebook.com/AcuProAcademy/videos/ren-12-cv-12-the-front-mu-point-of-stomach-acupuncturerocks/654368444704775/
 
 [www.journalofchinesemedicine.com]
 match = -250.0%%
@@ -62,8 +62,8 @@ title = Conception Vessel 12, CV 12, Ren-12 - Acupuncture-points.org
 url = https://www.acupuncture-points.org/conception-vessel-12.html
 
 [www.youtube.com]
-match = -520.0%%
-title = Functions of Ren 12 (CV12, Zhongwan 中脘穴) - Acupuncture ...
+match = -340.0%%
+title = Functions of Ren 12 (CV12, Zhongwan 中脘穴)
 url = https://www.youtube.com/watch?v=W1LAqwFK9Rw
 
 [www.maciociaonline.com]
