--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-31 00:55:15
+lastsearch = 2024-07-31 01:44:15
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,9 +27,9 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = 0.0%%
-title = Mẫu chăn ga gối cao cấp dòng Urban mã UC-05
-url = https://changagoidemsonghong.com/chan-ga-goi-uc05
+match = 17.9%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [flexhouse.vn]
 match = -17.9%%
