--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-30 20:12:16
+lastsearch = 2024-07-31 01:36:31
 
 [shopee.vn]
 match = -41.7%%
-title = Chiếu mây điều hòa các kích thước 1.5m-1.6m-1.8m-2.2x2m
-url = https://shopee.vn/Chiếu-mây-điều-hòa-các-kích-thước-1.5m-1.6m-1.8m-2.2x2m-i.26249437.338321510
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
