--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-30 22:13:38
+lastsearch = 2024-07-31 01:36:51
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 14.3%%
+title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
 match = -128.6%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Raohe Ẩm Thực Đài
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -128.6%%
+title = Pha xuất chiêu không tưởng từ Phan Trọng Quý khiến "Conor ...
+url = https://www.facebook.com/100037593873375/videos/862224902084812/?__so__=permalink
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -62,9 +62,9 @@ title = Địa lý Đài Loan
 url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [trithucvn.co]
-match = -100.0%%
-title = Nhà ngoại cảm Parker: Vấn đề eo biển Đài Loan là chìa ...
-url = https://trithucvn.co/the-gioi/nha-ngoai-cam-parker-van-de-eo-bien-dai-loan-la-chia-khoa-thang-cu-cua-ong-trump.html
+match = -123.8%%
+title = Tổng thống Đài Loan: Trung Quốc đe dọa bất kỳ nước nào ...
+url = https://trithucvn.co/the-gioi/tong-thong-dai-loan-trung-quoc-de-doa-bat-ky-nuoc-nao-la-de-doa-toan-the-gioi.html
 
 [xuatnhapcanh.gov.vn]
 match = -66.7%%
