--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-30 18:28:32
+lastsearch = 2024-07-31 01:50:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -13.3%%
-title = Grand Loyal Poker Club
-url = https://www.facebook.com/GrandLoyal/
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -404,7 +404,7 @@ url = https://tsttourist.com/vn/tay-an-khai-phong-lac-du-TSTOBCN31-TSTOBCN31-130
 [saca.com.vn]
 match = -133.3%%
 title = CÂU LẠC BỘ GOLF SACA TRÂN TRỌNG CẢM ƠN ...
-url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-seven-golf-tai-tro-2-hio-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips.html
+url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-seven-golf-tai-tro-2-hio-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips-1722322660.html
 
 [vpcqcsdt.bocongan.gov.vn]
 match = -40.0%%
