--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-30 22:49:31
+lastsearch = 2024-07-31 01:37:55
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -200.0%%
+title = Justin Chun - Irvine, California, United States
+url = https://www.linkedin.com/in/justin-chun-b9aa732b3
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -390,4 +390,14 @@ url = https://datascience.nih.gov/about/staff
 match = -138.5%%
 title = Open Courses | Crash List | Fall 2024
 url = https://www.sdmesa.edu/open-courses/
+
+[idv.sinica.edu.tw]
+match = 18.2%%
+title = Chun-Ju Lai
+url = https://idv.sinica.edu.tw/cjlai/
+
+[scholar.google.com]
+match = -14.3%%
+title = Chun Lu
+url = https://scholar.google.com/citations?user=ufM1QgQAAAAJ&hl=en
 
