--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-31 00:14:10
+lastsearch = 2024-07-31 02:20:52
 
 [demxanh.com]
 match = -84.2%%
@@ -380,4 +380,9 @@ url = https://graduation.asu.edu/sites/default/files/2023-12/FALL 2023_Day of WE
 match = -121.1%%
 title = Candidates for the US Presidential Scholars Program
 url = https://www2.ed.gov/programs/psp/2020/candidates.pdf
+
+[www.bambooairways.com]
+match = -168.4%%
+title = Bamboo Airways: More than just a flight - Official Booking Site
+url = https://www.bambooairways.com/
 
