--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-30 22:24:41
+lastsearch = 2024-07-31 02:19:26
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,14 +32,14 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -223.1%%
-title = RRK 12 Angles of Strikes | Kali Arnis Eskrima FMA
-url = https://www.youtube.com/watch?v=Ir_kRhS3llY
+match = -230.8%%
+title = The Gummy Bear Song - Long English Version - Gummibär
+url = https://www.youtube.com/watch?v=mB1PuesGGBc
 
 [www.regmovies.com]
 match = -215.4%%
