--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-31 00:22:47
+lastsearch = 2024-07-31 02:15:13
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -38,8 +38,8 @@ url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc
 
 [everon.com.vn]
 match = 48.3%%
-title = RUỘT GỐI EVERON STANDARD SOFT
-url = https://everon.com.vn/ruot-goi-standard-soft/
+title = Ruột Gối Everon Micro Evermic
+url = https://everon.com.vn/ruot-goi-everon-micro-evermic/?srsltid=AfmBOoqs15OvkQfd1ORr57fwGYTKeW26Dp0U2NcIdg3cD2pUGUwfD2um
 
 [suongtuyet.com]
 match = 24.1%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOop8uOwLWHGYG4v1rtjq4xVGcG79z4xCrRpeqhNX5AFCM4R8WDOh
 
 [everonvn.com.vn]
 match = -20.7%%
