--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-31 01:26:03
+lastsearch = 2024-07-31 02:21:33
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 45.5%%
+title = Thảm giường II 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -37,9 +37,9 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatthuynguyet.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [tiki.vn]
-match = -36.4%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+match = 0.0%%
+title = Mua Drap giường chống thấm 180 x 200 cm
+url = https://tiki.vn/drap-giuong-chong-tham-180-x-200-cm-p139192110.html
 
 [gusofa.vn]
 match = -81.8%%
