--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-31 01:48:50
+lastsearch = 2024-07-31 02:15:53
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -12,9 +12,9 @@ title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
 url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = 22.2%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -172.2%%
+title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
+url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamvinhthuan.com]
 match = 16.7%%
