--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-31 00:50:25
+lastsearch = 2024-07-31 02:12:13
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Buy South Korean won
 url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -73,7 +73,7 @@ url = https://www.studienreisen.de/studienreise_255983.html
 
 [www.tui.at]
 match = -175.0%%
-title = Südkorea Urlaub - Moderne und Tradition
+title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.at/pauschalreisen/suedkorea/
 
 [www.tui-reisecenter.sk]
