--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-31 02:17:39
+lastsearch = 2024-07-31 02:45:47
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrTf7SZL&sig=ACfU3U2HCp_7Nnv01Y5Fyc_FxVCqcLUOsA&hl=en&sa=X&ved=2ahUKEwjGzdGf5cmHAxVwOjQIHZeQDqQQ6AF6BAgkEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrVeeT-O&sig=ACfU3U1BF0ETm2z6vC_pEZwLV3wPfA5KYA&hl=en&sa=X&ved=2ahUKEwj04pfLw8-HAxWOl4kEHZWbEWUQ6AF6BAgmEAM
 
 [www.travelweekly.com]
 match = -87.0%%
