--- a/images/nem-sieu-nhe-5f-16/config.ini
+++ b/images/nem-sieu-nhe-5f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 lastopen = 2024-06-10 00:33:56
 
 [search]
-lastsearch = 2024-07-31 01:43:08
+lastsearch = 2024-07-31 02:51:14
 
 [shopee.vn]
 match = -61.1%%
@@ -49,7 +49,7 @@ url = https://www.traveloka.com/vi-vn/explore/culinary/30-mon-an-ngon-sai-gon/58
 [www.diepxuan.com]
 match = 44.4%%
 title = Điệp Xuân Nệm siêu nhẹ 5F 16
-url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html?srsltid=AfmBOoqalrJc3tqUXLyxzXanzL_TL9RWeo5oX9y_k-O3NDylfuD0UFzV
+url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 
 [m.facebook.com]
 match = -66.7%%
