--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-31 00:23:29
+lastsearch = 2024-07-31 02:46:28
 
 [shopee.vn]
-match = -191.7%%
-title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải ghế
+match = -216.7%%
+title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [goiaura.com]
 match = -16.7%%
@@ -58,8 +58,8 @@ url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
 match = -216.7%%
-title = Thảm Ghế Gỗ Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-ghe-go/
+title = NỆM GHẾ, THẢM GHẾ SOFA HOÀNG GIA NÂU LOẠI 2m2 ...
+url = https://www.lazada.vn/products/nem-ghe-tham-ghe-sofa-hoang-gia-nau-loai-2m2-x-60cm-i1033230006.html
 
 [vn.my-best.com]
 match = -233.3%%
