CI images update

--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-30 18:25:44
+lastsearch = 2024-07-31 03:15:24
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlglKLsma&sig=ACfU3U0ahU00f8m74zpxFYrOGZ9hrc1GYg&hl=en&sa=X&ved=2ahUKEwidkMjo086HAxX4I0QIHZ8XBzcQ6AF6BAgYEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlglODqka&sig=ACfU3U242y_rPIQax5V4RnbuZBXIDv5b3A&hl=en&sa=X&ved=2ahUKEwicxqWays-HAxVCEVkFHSZIA2IQ6AF6BAgjEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
