--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-30 21:59:57
+lastsearch = 2024-07-31 03:12:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOorft9hXB8DqHBdVrMcPDnnOJgi-kS2pdsDcx9kZRodWoB9T6F9L
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOoqy9b-6XtMZtCzDSrLcrpjvlEe-7etas9cVta8EdvhaBbecMtud
 
 [tiki.vn]
 match = -42.9%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -100.0%%
-title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
-url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
@@ -632,7 +632,7 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -57.1%%
-title = Giai đoạn hoàng thể và quá trình thụ thai
-url = https://www.vinmec.com/vie/bai-viet/giai-doan-hoang-va-qua-trinh-thu-thai-vi
+match = -4.8%%
+title = Sự phát triển của thai nhi tuần 8
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-8-vi
 
