--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-31 02:47:52
+lastsearch = 2024-07-31 03:14:20
 
 [sieuthidemonline.vn]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood - thương hiệu Tuấn Anh hàng đầu.
 url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 
 [demxanh.com]
-match = -95.2%%
-title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html
+match = -81.0%%
+title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
+url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
 
 [www.diepxuan.com]
 match = 4.8%%
