--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-30 16:17:17
+lastsearch = 2024-07-31 03:16:09
 
 [www.tiktok.com]
-match = -243.8%%
-title = Lip liner: @Huda Beauty in muted pink Lipstick: @Charlotte ...
-url = https://www.tiktok.com/@faydeutsch/video/7278866493734178094
+match = -181.2%%
+title = use my discount code AYASCHANNEL1 on @YesStyle ...
+url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
 
 [digitalmaine.com]
 match = -75.0%%
@@ -212,8 +212,8 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -175.0%%
-title = new rolex yachtmaster - rolex yacht master price new
+match = -200.0%%
+title = new rolex yachtmaster - rolex yacht master price new ...
 url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.veryberryfrozenyogurt.com]
@@ -245,4 +245,9 @@ url = https://m.shein.com.vn/store/home?store_code=4482925045&type=selection&rou
 match = -106.2%%
 title = Avatar Studios Logo : r/TheLastAirbender
 url = https://www.reddit.com/r/TheLastAirbender/comments/lrqa8p/avatar_studios_logo/
+
+[kuw725.com]
+match = -175.0%%
+title = michael kors wristlets clearance - More - kuw725.com
+url = https://kuw725.com/product/wzlekofi-215//
 
