--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-31 00:11:44
+lastsearch = 2024-07-31 03:41:14
 
 [www.instagram.com]
-match = -376.9%%
-title = som1aej 🌌🎉 AEJ Team宠粉福利Giveaway! 🎉🌌 我们将送出 ...
-url = https://www.instagram.com/chan.h.yee.98/p/C21XGIDJZVE/
+match = -92.3%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -276.9%%
+title = Chow hoi ting Chow - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
 
 [wwd.com]
 match = -253.8%%
@@ -152,8 +152,8 @@ title = Get To Know The 15 Biggest Art Collectors In Hong Kong
 url = https://www.tatlerasia.com/lifestyle/arts/hk-get-to-know-the-15-biggest-art-collectors-in-hong-kong
 
 [www.dailymail.co.uk]
-match = -284.6%%
-title = Ex showbiz reporter becomes the richest woman in Hong ...
+match = -230.8%%
+title = Ex showbiz reporter becomes the richest woman ...
 url = https://www.dailymail.co.uk/news/article-4275540/Ex-showbiz-reporter-richest-woman-Hong-Kong.html
 
 [m.facebook.com]
