--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-31 01:36:07
+lastsearch = 2024-07-31 03:36:22
 
 [www.youtube.com]
 match = -147.4%%
@@ -312,9 +312,9 @@ title = Hoa sen cạn có kỹ thuật trồng cây không khó
 url = http://ttkhcn.baria-vungtau.gov.vn/tttv/Question/DetailQuestion/334?page=16
 
 [yte.nghean.gov.vn]
-match = -168.4%%
-title = Xu hướng sử dụng thực phẩm chế biến sẵn gia tăng, chuyên ...
-url = https://yte.nghean.gov.vn/tin-chuyen-nganh/xu-huong-su-dung-thuc-pham-che-bien-san-gia-tang-chuyen-gia-dinh-duong-noi-gi-683206
+match = -136.8%%
+title = 3 món ăn nhẹ dễ làm tốt cho sức khỏe tim mạch - Sở Y tế
+url = https://yte.nghean.gov.vn/tin-chuyen-nganh/3-mon-an-nhe-de-lam-tot-cho-suc-khoe-tim-mach-683120
 
 [www.vinmec.com]
 match = -131.6%%
