--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-30 21:59:36
+lastsearch = 2024-07-31 03:25:20
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,7 +14,7 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOornTbUiarwKgnPnjaxj3Xp6PnzOyGiBRHMPJGHcegYSIj3Czcc8
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -32,9 +32,9 @@ title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
 url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
-match = 50.0%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -37.5%%
+title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
+url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
 
 [www.yellowpages.vn]
 match = -37.5%%
