--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-31 00:15:49
+lastsearch = 2024-07-31 03:34:33
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -24,7 +24,7 @@ url = https://www.hcso.org/justice-center-services/inmate-search/
 [desaulnier.house.gov]
 match = -180.0%%
 title = Congressman Mark Desaulnier | Representing the 10th ...
-url = https://desaulnier.house.gov/
+url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
 match = -226.7%%
