--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-31 02:23:39
+lastsearch = 2024-07-31 03:31:43
 
 [www.bible.com]
-match = -128.6%%
-title = MARKA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -135.7%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = -150.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [manthutrang.com]
 match = -207.1%%
