--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-31 03:16:29
+lastsearch = 2024-07-31 03:49:29
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -34,7 +34,7 @@ url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan
 [everonvn.com.vn]
 match = -32.1%%
 title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
-url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon?srsltid=AfmBOopqbZyo-rOjGOTY-t038GhnAf7wlQTI0Ws9a_uJt64kLuTyIxR8
+url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
