--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-30 22:15:01
+lastsearch = 2024-07-31 03:46:20
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Điệp Xuân Ga chun chần ES1707 160x200
-url = https://www.diepxuan.com/ga-chun-chan-es1707-160x200.html
+match = 0.0%%
+title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
