--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-31 02:26:00
+lastsearch = 2024-07-31 03:56:29
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxXB90B_&sig=ACfU3U30O4oiCVXCsIiHdS2r1SfFEe3c9w&hl=en&sa=X&ved=2ahUKEwi2-4WM8M6HAxWGF1kFHWJKMSUQ6AF6BAgtEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxXE56HV&sig=ACfU3U1xR7xYfTvW6BygcOfxl3KTG0oQdw&hl=en&sa=X&ved=2ahUKEwiq3fex08-HAxX5mokEHWV6IEsQ6AF6BAgbEAM
 
 [ottawabraves.com]
 match = -292.3%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -253.8%%
-title = 0462-209-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
-url = https://www.deutschconnectorstore.com/p-86-deutsch-0462-209-16141-contact-16-14-ga.html
+match = -200.0%%
+title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
+url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
