--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-31 02:49:34
+lastsearch = 2024-07-31 03:49:48
 
 [www.youtube.com]
 match = -420.0%%
@@ -133,8 +133,8 @@ url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gja
 
 [www.reddit.com]
 match = -340.0%%
-title = [14 Days With You] Ren appreciation fan art for ...
-url = https://www.reddit.com/r/MaleYandere/comments/wg38wf/14_days_with_you_ren_appreciation_fan_art_for_you/
+title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
+url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
 
 [www.maciociaonline.com]
 match = -250.0%%
