CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-31 04:30:29
+lastsearch = 2024-07-31 04:56:49
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = -80.0%%
-title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
-url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
+match = 0.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = sitemap-article-2022-10-12.xml
 url = https://congly.vn/sitemap-article-2022-10-12.xml
 
 [www.facebook.com]
-match = -124.0%%
-title = 20231212 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
-url = https://www.facebook.com/ptsvietnamesenews/videos/20231212-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/1378308362826085/
+match = 12.0%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
 match = -4.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -40.0%%
-title = Văn Mẫu Lớp 12 (Tập 2) - Google Books Result
-url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfT22maZk&sig=ACfU3U2_s4vh48969i27aIwkCqnPLyz5og&hl=en&sa=X&ved=2ahUKEwiC-Py6js-HAxWtJNAFHbwcDPAQ6AF6BAgbEAM
+match = -80.0%%
+title = Những Bài Văn Lớp 12 Hay Thi (Tập 1) - Google Books Result
+url = https://books.google.com/books?id=zeMGEQAAQBAJ&pg=PT159&lpg=PT159&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=5HmGAAY2rI&sig=ACfU3U1lbNOpsqbnMgG2hiifEcnr5dvSbA&hl=en&sa=X&ved=2ahUKEwi0mtTv4M-HAxWLFVkFHcnYH5MQ6AF6BAgcEAM
 
 [www.skyscanner.com.vn]
 match = -88.0%%
