--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-31 03:18:16
+lastsearch = 2024-07-31 04:49:04
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -22,8 +22,8 @@ title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -50.0%%
-title = Thảm tròn trải chân giường trong phòng ngủ ...
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
@@ -67,8 +67,8 @@ title = Nguyên tắc lựa chọn thảm trang trí cho gia đình
 url = https://moho.com.vn/blogs/noi-that-ung-dung/nguyen-tac-lua-chon-tham-trang-tri-cho-gia-dinh
 
 [homeoffice.com.vn]
-match = -54.5%%
-title = Hướng Dẫn Tính Kích Thước Giường Ngủ Đúng ...
+match = -90.9%%
+title = Hướng Dẫn Tính Kích Thước Giường Ngủ Đúng Chuẩn & ...
 url = https://homeoffice.com.vn/kich-thuoc-giuong-ngu-dung-tieu-chuan.html
 
 [vn.my-best.com]
