--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-30 22:23:39
+lastsearch = 2024-07-31 05:00:35
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,14 +22,14 @@ title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
 url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
+match = -33.3%%
+title = Bộ ga chun Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
-match = -19.0%%
-title = Chăn ga gối 100%% cotton mã mầu BC22-060
-url = https://changagoidemsonghong.com/chan-ga-goi-bc60
+match = -71.4%%
+title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
+url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [everonletrongtan.com]
 match = 19.0%%
