--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-31 00:53:11
+lastsearch = 2024-07-31 04:51:52
 
 [demxanh.com]
 match = 34.5%%
@@ -37,9 +37,9 @@ title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
 url = https://shopee.vn/product/1063512412/22353005341?gsht=sjFxkDeGHTM5gwwS
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [kyoryo.vn]
 match = 20.7%%
@@ -59,7 +59,7 @@ url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 [www.diepxuan.com]
 match = 31.0%%
 title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html?srsltid=AfmBOorsUnNR0CtP8-08RJljcFB7-dyDSMq-aynbGp8efU6oQ_qSkRCg
+url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
 match = 10.3%%
