--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-31 02:21:14
+lastsearch = 2024-07-31 04:53:38
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -389,7 +389,7 @@ url = https://thelawdictionary.org/article/best-way-to-find-someone-in-jail-for-
 [www.uniqlo.com]
 match = -233.3%%
 title = Women's, Men's and Kids' Clothing & Accessories | UNIQLO US
-url = https://www.uniqlo.com/us/en/
+url = https://www.uniqlo.com/us/en/?srsltid=AfmBOorhcb1zy2n-Fna01gqMfnR4Yx_AFjAxVIFfXUlZccpQr90ykNUC
 
 [www.nhs.uk]
 match = -120.0%%
