--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-31 03:27:30
+lastsearch = 2024-07-31 04:52:12
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,7 +29,7 @@ url = https://everonhn.com.vn/tam-trai-da-nang-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOoo7IFPy5a3x0ZxBtFT1kfdzmcHp4n_svqkgINBZMC2JGpfY4BCI
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
 
 [everon.com]
 match = -113.6%%
