--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-31 01:23:20
+lastsearch = 2024-07-31 04:48:45
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,19 +17,19 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -21.1%%
-title = ADDITIONAL CASE INFORMATION
-url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -142.1%%
-title = Exercise Recommendations for Cancer-Related Fatigue ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3647480/
+match = -168.4%%
+title = Review of influenza-associated pulmonary aspergillosis in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,13 +37,13 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Kathleen Fisch
-url = https://profiles.ucsd.edu/kathleen.fisch
+match = -41.7%%
+title = Tommi Gaines
+url = https://profiles.ucsd.edu/tommi.gaines
 
 [medboard.nv.gov]
-match = -100.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -121.1%%
+title = Disciplinary Actions - Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.techcosmos.com.hk]
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
