--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-31 04:28:49
+lastsearch = 2024-07-31 05:00:16
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -52,9 +52,9 @@ title = Vỏ gối nằm được bán bởi công ty Lidaco Official Store
 url = https://sieuthicholon.com/vo-goi-nam-23484/?cong-ty=lidaco-official-store
 
 [dienmayhc.com]
-match = -166.7%%
-title = Vỏ gối nằm được bán bởi người bán PHUCTHAI CHĂN GA GỐI ...
-url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=phucthai-chan-ga-goi
+match = -216.7%%
+title = Vỏ gối nằm chính hãng, giá rẻ, mới nhất tháng 07/2024, Giao hàng ...
+url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=347868522
 
 [www.archerytalk.com]
 match = -44.4%%
