CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-30 22:32:19
+lastsearch = 2024-07-31 05:22:25
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -125.0%%
-title = LỄ BỐC THĂM CHIA CẶP... - Cao Thủ Liên Quân
-url = https://www.facebook.com/story.php/?story_fbid=1021633259632655&id=100053579700031
+match = -250.0%%
+title = Đi ngược chiều bị ô tô đi đúng chặn lại, anh ấy dỗi bỏ xe trước ...
+url = https://www.facebook.com/atgt.vhgt/videos/507223131766834/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -665,4 +665,9 @@ url = https://pandora.norbreeze.vn/pages/size-guide-1
 match = -68.8%%
 title = Cách Lần Hạt Mân Côi | CôngGiáo.org
 url = https://www.conggiao.org/cach-lan-hat-man-coi/
+
+[www.vaticannews.va]
+match = -106.2%%
+title = Tin Mừng và Lời Chúa ngày 16 tháng tám 2024
+url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/08/16.html
 
