--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-30 20:52:39
+lastsearch = 2024-07-31 05:11:25
 
 [xoptraisan.info]
 match = -64.7%%
@@ -32,14 +32,14 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -129.4%%
-title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
-url = https://trieuchau.com/
+match = -105.9%%
+title = 40*40*10 tấm - Thảm xốp trải sàn vân gỗ Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28075/Tham-Xop-40x40cm/404010-tam--Tham-xop-trai-san-van-go-Au-Lac
 
 [www.facebook.com]
-match = -23.5%%
-title = Thảm Xốp Ghép Trải Sàn | Hanoi
-url = https://www.facebook.com/xoptraisan/
+match = -170.6%%
+title = Xốp ghép sàn vân khế cao cấp Tường... - THẢM XỐP TRẢI ...
+url = https://www.facebook.com/story.php/?story_fbid=4307634746008667&id=357113847727463
 
 [thamsami.com]
 match = -111.8%%
@@ -57,9 +57,9 @@ title = Thảm nỉ ghép cao cấp Tường Lâm mọi kích thước
 url = https://chuyenhangviet.com/tham-ni-ghep-cao-cap-tuong-lam/
 
 [www.innhatkhang.com]
-match = 0.0%%
-title = In Túi Xốp 2 Quai Giá Rẻ
-url = https://www.innhatkhang.com/tui-xop/in-tui-xop-gia-re.html
+match = 23.5%%
+title = Xưởng In Túi Xốp Giá Rẻ
+url = https://www.innhatkhang.com/blog/mau-in-tui-xop-gia-re.html
 
 [demhong.vn]
 match = -111.8%%
@@ -135,4 +135,9 @@ url = http://tayphuthuan.com/san-pham/tham-xop-lot-san-nha-778.html
 match = 0.0%%
 title = 
 url = https://finance.yahoo.com/quote/XOP/holdings/
+
+[noithatdhg.com.vn]
+match = -217.6%%
+title = Keo xịt dán xốp dán tường, giấy, thảm nỉ, thảm simili, vải, gỗ ...
+url = https://noithatdhg.com.vn/san-pham/keo-xit-dan-xop-dan-tuong-giay-tham-ni-tham-simili-vai-go-mut-cach-am/
 
