--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-31 02:47:31
+lastsearch = 2024-07-31 05:13:54
 
 [www.lazada.vn]
 match = -50.0%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = -100.0%%
@@ -112,9 +112,9 @@ title = Acronym Key
 url = https://www.nationalguard.mil/Portals/31/Documents/SpecialStaff/small-business-programs/Business Opportunities/NGB-AQ FY23 Small Business Acquistion Forecast Update 15 Dec 2022.xlsx
 
 [nepis.epa.gov]
-match = -161.1%%
-title = Development of the Westvaco Activated Carbon Process ...
-url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=91015SCM.TXT
+match = -216.7%%
+title = Population Exposure to External Natural Radiation ... - epa nepis
+url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=9100FEVY.TXT
 
 [www.initse.com]
 match = 5.6%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -138.9%%
-title = AXOR Universal Softsquare Shower door handle 444 mm
-url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
+match = -155.6%%
+title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
+url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -365,4 +365,9 @@ url = https://baminh.com/vo-goi-lua-khau-thu-cong-50x70cm
 match = -38.5%%
 title = Abbreviations
 url = https://www.practicalradonc.org/cms/10.1016/j.prro.2022.05.004/attachment/73029f4a-263f-4bff-ba5a-038055b1823f/mmc4.xlsx
+
+[weblink.ci.golden-valley.mn.us]
+match = -800.0%%
+title = 19
+url = http://weblink.ci.golden-valley.mn.us/WebLink/DocView.aspx?id=574977&page=184&dbid=0&repo=GoldenValley
 
