--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-31 03:54:40
+lastsearch = 2024-07-31 05:24:48
 
 [shopee.vn]
-match = -94.7%%
-title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
+match = -126.3%%
+title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
 
 [chieutrelanlan.com]
 match = -105.3%%
