--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-31 03:39:31
+lastsearch = 2024-07-31 05:15:19
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html
+url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOoprOQRwPa1xISzmD1Ox-Co4as7BBjg2Zy8OWgJ5wAvrkH-5e1lm
 
 [shopee.vn]
 match = -146.7%%
@@ -249,7 +249,7 @@ url = https://cchouse.vn/Ban-Mat-tien-1113-Nguyen-Van-Lac-P21-Quan-Binh-Thanh-Go
 [chuyentactical.com]
 match = -53.3%%
 title = Sạc pin Fenix ARE-D2 Micro USB
-url = https://chuyentactical.com/den-pin/sac-pin-fenix-are-d2/
+url = https://chuyentactical.com/den-pin/sac-pin-fenix-are-d2/?srsltid=AfmBOory3pJyUbbdkpVi4PtjaTKCCaZJ8fHoVIWG7C8JwPo6vNppdRtO
 
 [concung.com]
 match = -220.0%%
