--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-31 04:26:39
+lastsearch = 2024-07-31 05:25:11
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 22.2%%
-title = CHIẾU TRE TRÚC HCM
-url = https://www.facebook.com/chieutructot/?locale=vi_VN
+match = 5.3%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -32,19 +32,19 @@ title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [chieutrucsaigon.com]
-match = 8.3%%
-title = CHIẾU TRÚC VIỆT NAM CHẤT LƯỢNG RA SAO?
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-viet-nam-chat-luong-ra-sao-128.html
+match = 12.5%%
+title = CUNG CẤP CHIẾU TRÚC QUẬN PHÚ NHUẬN
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cung-cap-chieu-truc-quan-phu-nhuan-75.html
 
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOorm0lvn2CkhRBnWb9D2mj_1Hjfqj-obXG28khmebub5ngWB542s
 
 [demxanh.com]
 match = -54.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqX-U_wMEF-XpCLaK88An6ylSu0ASzU3Zy9Olg6sTGwKKtyyxHE
 
 [www.youtube.com]
 match = -75.0%%
