--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-30 20:31:20
+lastsearch = 2024-07-31 05:13:11
 
 [dvan.org]
 match = -41.7%%
@@ -49,7 +49,7 @@ url = https://gaubongquatang.com/danh-muc/goi-men-gia-re-tphcm--170
 [www.lazada.vn]
 match = -50.0%%
 title = Gối ôm Giá Rẻ Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/goi-om-gia-re/?srsltid=AfmBOoo70nRMfYWXCvM1C5w3FIaVKskQdsKG8Ch7LSBKPuBpZAGXZQNH
+url = https://www.lazada.vn/tag/goi-om-gia-re/
 
 [youngricedrap.com]
 match = -66.7%%
