--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-31 03:49:48
+lastsearch = 2024-07-31 05:14:36
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -400.0%%
-title = What's Ren's and Redacted's personalities like? Since ...
-url = https://www.tumblr.com/14dayswithyou/733219227716190208/whats-rens-and-redacteds-personalities-like
+match = -70.0%%
+title = ren 14 days with you
+url = https://www.tumblr.com/tagged/ren 14 days with you
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [twitter.com]
 match = -430.0%%
@@ -133,8 +133,8 @@ url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gja
 
 [www.reddit.com]
 match = -340.0%%
-title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
-url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
+title = [14 Days With You] Ren appreciation fan art for ...
+url = https://www.reddit.com/r/MaleYandere/comments/wg38wf/14_days_with_you_ren_appreciation_fan_art_for_you/
 
 [www.maciociaonline.com]
 match = -250.0%%
