--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-31 03:50:53
+lastsearch = 2024-07-31 05:20:23
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -21.4%%
-title = 12.12: The Day
-url = https://en.wikipedia.org/wiki/12.12:_The_Day
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -115.0%%
 title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_sobGLN4ht&sig=ACfU3U0HDkY7Qsl7zXGirzJSBwhwikfwAQ&hl=en&sa=X&ved=2ahUKEwi-h7jiksiHAxViElkFHYr2G5wQ6AF6BAggEAM
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_sobIRQ3hr&sig=ACfU3U0fLGi4Y7G_-G_CurxTFkbUejA3MA&hl=en&sa=X&ved=2ahUKEwik0v2R5s-HAxUCPUQIHWQyJFkQ6AF6BAhBEAM
 
 [thehill.com]
 match = -105.0%%
