--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-31 04:50:48
+lastsearch = 2024-07-31 05:22:46
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -133.3%%
+title = 55+ MẪU GIÁ BÀN GHẾ ĐÁ GIẢ GỖ RẺ ĐẸP NHẤT 2024
+url = https://ghedagiago.com/danh-muc/ban-ghe-da-gia-go/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -133.3%%
-title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
-url = https://ghedamienbac.com/ban-ghe-da/
+match = -120.0%%
+title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
+url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [bangheda.info]
 match = -140.0%%
@@ -57,8 +57,8 @@ title = Ghế đá băng dài công viên GDM-121
 url = https://ghedaviet.net/ghe-da-bang-dai-cong-vien-gdm-121.html
 
 [damynghedps.vn]
-match = -206.7%%
-title = Bảng Giá Bộ Bàn Ghế Đá Tự Nhiên, Sân Vườn Mới Nhất T9 ...
+match = -186.7%%
+title = Bảng Giá Bộ Bàn Ghế Đá Tự Nhiên, Sân Vườn Mới Nhất ...
 url = https://damynghedps.vn/cong-trinh-da/ban-ghe-da/
 
 [noithathoaphat.com]
